## Process this file with automake to produce Makefile.in
EXTRA_DIST = abstractnode.cpp booleannode.cpp compoundnode.cpp compoundwidget.cpp datafilesyntaxes.cpp floatnode.cpp gui.cpp integernode.cpp main.cpp singlechoicenode.cpp stringnode.cpp abstractnode.h booleannode.h compoundnode.h compoundwidget.h datafilesyntaxes.h floatnode.h gui.h integernode.h singlechoicenode.h singlelinenode.h stringnode.h

