IF(ENABLE_TOOLS AND NOT WIN32)
	INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR} ${INCLUDE_DIRS})
	FILE(GLOB GLUEM_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.c ../src/text_public.c)
	ADD_EXECUTABLE(gluem ${GLUEM_SOURCES})
	TARGET_LINK_LIBRARIES(gluem ${LINK_LIBRARIES})
	INSTALL(TARGETS gluem DESTINATION ${BINDIR})
ENDIF(ENABLE_TOOLS AND NOT WIN32)