INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR} ${INCLUDE_DIRS})
FILE(GLOB FDRPG_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.c)
ADD_EXECUTABLE(freedroidrpg WIN32 ${FDRPG_SOURCES})
TARGET_LINK_LIBRARIES(freedroidrpg ${LINK_LIBRARIES})
IF(WIN32)
	SET_TARGET_PROPERTIES(freedroidrpg PROPERTIES LINK_FLAGS "../win32/freedroidrpg.coff")
	ADD_DEPENDENCIES(freedroidrpg resources)
ENDIF(WIN32)
INSTALL(TARGETS freedroidrpg DESTINATION ${BINDIR})