INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR} ${INCLUDE_DIRS})
FILE(GLOB FDRPG_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.c)
ADD_EXECUTABLE(freedroidRPG WIN32 ${FDRPG_SOURCES})
TARGET_LINK_LIBRARIES(freedroidRPG ${LINK_LIBRARIES})
IF(WIN32)
	SET_TARGET_PROPERTIES(freedroidRPG PROPERTIES LINK_FLAGS "../win32/freedroidrpg.coff")
	ADD_DEPENDENCIES(freedroidRPG resources)
ENDIF(WIN32)
INSTALL(TARGETS freedroidRPG DESTINATION ${BINDIR})
